--- a/.github/workflows/on_master_push_fsw.yml
+++ b/.github/workflows/on_master_push_fsw.yml
@@ -14,6 +14,8 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
+    - name: list
+      run: ls
     - name: report status
       run: git status
     - name: report branch
