--- a/.travis.yml
+++ b/.travis.yml
@@ -25,21 +25,20 @@ install:
   - cd ..
   - git clone https://github.com/nasa/cFS.git
 
-jobs:
-  include:
-    stage: style check
-      script:
-        # Get bundle (doesn't populate submodules, not needed for style enforcement)
-        - mv ci_lab cFS/apps
-        - cd cFS/apps/ci_lab
-        # Enforce formatting
-        - find . -name "*.[ch]" -exec clang-format-10 -i -style=file {} +
-        - git diff > style_differences.txt
-        - |
-          if [[ -s style_differences.txt ]]; then
-            echo "You must fix style differences before submitting a pull request"
-            echo ""
-            cat style_differences.txt
-            exit -1
-          fi
-    stage: bundle check
+script:
+# Get bundle (doesn't populate submodules, not needed for style enforcement)
+  - mv ci_lab cFS/apps
+  - cd cFS/apps/ci_lab
+  # Enforce formatting
+  - find . -name "*.[ch]" -exec clang-format-10 -i -style=file {} +
+  - git diff > style_differences.txt
+  - |
+    if [[ -s style_differences.txt ]]; then
+      echo "You must fix style differences before submitting a pull request"
+      echo ""
+      cat style_differences.txt
+      exit -1
+    fi
+script:
+  - git submodule init
+  - cp ci_lab cFS/apps
