--- a/.travis.yml
+++ b/.travis.yml
@@ -25,10 +25,10 @@ install:
   - cd ..
   - git clone https://github.com/nasa/cFS.git
 
-# script:
-# # Get bundle (doesn't populate submodules, not needed for style enforcement)
-#   - mv ci_lab cFS/apps
-#   - cd cFS/apps/ci_lab
+script:
+# Get bundle (doesn't populate submodules, not needed for style enforcement)
+  - mv ci_lab cFS/apps
+  - cd cFS/apps/ci_lab
 #   # Enforce formatting
 #   - find . -name "*.[ch]" -exec clang-format-10 -i -style=file {} +
 #   - git diff > style_differences.txt
