--- a/.travis.yml
+++ b/.travis.yml
@@ -19,18 +19,42 @@ before_install:
 install:
   - sudo apt-get install cppcheck
   - sudo apt-get install clang-format-10
+
+before_script:
   - clang-format-10 --version
   - pwd
   - cd ..
+  # Get bundle (doesn't populate submodules, not needed for style enforcement)
   - git clone https://github.com/nasa/cFS.git
-
-before_script:
   - cp -r ci_lab cFS/apps
 
-script:
-# Get bundle (doesn't populate submodules, not needed for style enforcement)
-  - cd cFS/apps/ci_lab
-#   # Enforce formatting
+
+jobs:
+  include:
+    # Enforce formatting
+    - stage: style check
+      script:
+        - cd cFS/apps/ci_lab
+        - find . -name "*.[ch]" -exec clang-format-10 -i -style=file {} +
+        - git diff > style_differences.txt
+        - |
+          if [[ -s style_differences.txt ]]; then
+            echo "You must fix style differences before submitting a pull request"
+            echo ""
+            cat style_differences.txt
+            exit -1
+            fi
+            
+    - stage: integration test
+      script:
+        - cd cFS
+        - git submodule init
+        - cd ..
+        - cp -r ci_lab cFS/apps
+
+
+
+
 #   - find . -name "*.[ch]" -exec clang-format-10 -i -style=file {} +
 #   - git diff > style_differences.txt
 #   - |
