mobve cache prep to stage

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,16 +26,16 @@ before_install:
 before_script:
   - cppcheck --version
   - clang-format-10 --version
-  - cd ..
-
-script:
-  # Get bundle (doesn't populate submodules, not needed for style enforcement)
-  - git clone https://github.com/nasa/cFS.git
-  - git submodule init
-  - git submodule deinit apps/ci_lab/
 
 jobs:
   include:
+
+    - stage: prepare cache
+      script:
+        # Get bundle (doesn't populate submodules, not needed for style enforcement)
+        - git clone https://github.com/nasa/cFS.git
+        - git submodule init
+        - git submodule deinit apps/ci_lab/
 
     - stage: style check
     # Enforce formatting
