--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,6 @@ addons:
     packages:
       - cmake
       - ccache
-
 cache:
   - $HOME/.ccache
   - $HOME/cFS
@@ -20,6 +19,8 @@ before_install:
   - wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
   - sudo add-apt-repository 'deb http://apt.llvm.org/bionic/   llvm-toolchain-bionic-10 main'
   - sudo apt-get update
+
+install:
   - sudo apt-get install cppcheck
   - sudo apt-get install clang-format-10
 
@@ -34,6 +35,7 @@ jobs:
       script:
         # Get bundle (doesn't populate submodules, not needed for style enforcement)
         - git clone https://github.com/nasa/cFS.git
+        - cd $HOME/cFS
         - git submodule init
         - git submodule deinit apps/ci_lab/
 
