--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,8 @@ jobs:
       script:
         # Get bundle (doesn't populate submodules, not needed for style enforcement)
         - git clone https://github.com/nasa/cFS.git
-        - cd $HOME/cFS
+        - cd ./cFS
+        - pwd
         - git submodule init
         - git submodule deinit apps/ci_lab/
 
