--- a/.travis.yml
+++ b/.travis.yml
@@ -27,22 +27,21 @@ install:
 before_script:
   - cppcheck --version
   - clang-format-10 --version
+  - cd $HOME
+  # Get bundle (doesn't populate submodules, not needed for style enforcement)
+  - git clone https://github.com/nasa/cFS.git
+
+script:
+  - cd ./cFS
+  - pwd
+  - git submodule init
+  - git submodule deinit apps/ci_lab/
 
 jobs:
   include:
-
-    - stage: prepare cache
-      script:
-        - cd $HOME
-        # Get bundle (doesn't populate submodules, not needed for style enforcement)
-        - git clone https://github.com/nasa/cFS.git
-        - cd ./cFS
-        - pwd
-        - git submodule init
-        - git submodule deinit apps/ci_lab/
-
-    - stage: style check
+    - stage: checks
     # Enforce formatting
+      name: "Style Checks"
       script:
         - cp -r $TRAVIS_BUILD_DIR cFS/apps
         - cd cFS/apps/ci_lab
@@ -55,13 +54,16 @@ jobs:
             cat style_differences.txt
             exit -1
             fi
+    # - script:
+    #   - stuff
+    #   name: "Style Checks"
+    # - stage: build
 
     - stage: integration test
       script:
         - cd $HOME/cFS
         - git submodule update
-        - cd ..
-        - cp -r $TRAVIS_BUILD_DIR cFS/apps/
+        - cp -r $TRAVIS_BUILD_DIR $HOME/cFS/apps/
 
 
 
